--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://via.placeholder.com/800x300?text=First+Slide" class="d-block w-100" alt="First slide">
+            <img src="online/image/sildeone.webp" class="d-block w-100" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img src="https://via.placeholder.com/800x300?text=Second+Slide" class="d-block w-100" alt="Second slide">
+            <img src="online/image/slidertwo.webp" class="d-block w-100" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img src="https://via.placeholder.com/800x300?text=Third+Slide" class="d-block w-100" alt="Third slide">
+            <img src="online/image/sildethree.webp" class="d-block w-100" alt="Third slide">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
