--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </section>
 
 <br><br>
-
+<!-- 
 <div id="carouselExampleIndicators" class="carousel slide">
     <ol class="carousel-indicators">
         <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
@@ -63,13 +63,13 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="online/image/sildeone.webp" class="d-block w-100" alt="First slide">
+            <img src="image/sildeone.webp" class="d-block w-100" alt="First slide" style="height: 100%;">
         </div>
         <div class="carousel-item">
-            <img src="online/image/slidertwo.webp" class="d-block w-100" alt="Second slide">
+            <img src="image/slidertwo.webp" class="d-block w-100" alt="Second slide" style="height: 100%;">
         </div>
         <div class="carousel-item">
-            <img src="online/image/sildethree.webp" class="d-block w-100" alt="Third slide">
+            <img src="image/sildethree.webp" class="d-block w-100" alt="Third slide" style="height: 100%;">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -80,7 +80,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
-</div>
+</div> -->
 <br><br>
 
 <!-- Service Section -->
